objects/Milestone1_Log__c.object
<CustomObject><fields>
        <fullName>Detail__c</fullName>
        <inlineHelpText>The details about the log. This is freeform text for user to capture whatever data they want to keep track of in the log.</inlineHelpText>
        <label>Detail</label>
        <length>32000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Project_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A project expense we want to log some information about.</inlineHelpText>
        <label>Project Expense</label>
        <referenceTo>Milestone1_Expense__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A milestone we want to log about.</inlineHelpText>
        <label>Project Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A project task we want to log some information about.</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Project_Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A time entry we want to log some information about.</inlineHelpText>
        <label>Project Time</label>
        <referenceTo>Milestone1_Time__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Project__c</fullName>
        <inlineHelpText>The project which we want to keep this log record for.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>The subject of this log entry.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The type of log. This can be used to order logs into different types.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>InDevelopment</deploymentStatus><description>Force.com Labs - PM - Log items contain general information for a Project that a user may want to keep an informal record of.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Log</label><nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Project Log Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Logs</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Project__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>